--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGB3TpdaKMgzK898HRkJop332i_ya9BSE&libraries=places"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -14,9 +14,10 @@
 <td><input type="text" id="addressInput"><br></td>
 
 
-<button class="btn btn-info" id="Do it" onclick="getAddress()">Do it</button>
+<button class ="fixed" id="DEWIT" onclick="getAddress()">Do it</button>
 
 <div id="console"></div>
+<div id="console1"></div>
 
 </body>
 </html>
