--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 
-<td><input type="text" id="addressInput"><br></td>
+<td><input class="input" type="text" placeholder="Address" id="addressInput"><br></td>
 
 
-<button class ="fixed" id="DEWIT" onclick="getAddress()">Do it</button>
+<button class="fixed" id="DEWIT" onclick="getAddress()">Do it</button>
 
-<div id="console"></div>
-<div id="console1"></div>
+<div class="fixed2" id="console"></div>
+<div class="fixed3" id="console1"></div>
 
 </body>
 </html>
